@@ -2304,13 +2304,13 @@ install_config() {
 
     logMessage "Aktualisiere $CONFIG_TXT..."
     local config_txt_changed=false
-    if ! grep -q "dtoverlay=i2c-rtc,ds1307" "$CONFIG_TXT"; then
+    if ! grep -Eq '^[[:space:]]*dtoverlay=i2c-rtc,ds1307([[:space:]]|$)' "$CONFIG_TXT"; then
         echo "dtoverlay=i2c-rtc,ds1307" >> "$CONFIG_TXT"
         filesUpdated=true
         config_txt_changed=true
         logMessage "dtoverlay=i2c-rtc,ds1307 zu $CONFIG_TXT hinzugefügt."
     fi
-    if ! grep -q "dtoverlay=mcp3208,spi0-0-present" "$CONFIG_TXT"; then
+    if ! grep -Eq '^[[:space:]]*dtoverlay=mcp3208,spi0-0-present([[:space:]]|$)' "$CONFIG_TXT"; then
         echo "dtoverlay=mcp3208,spi0-0-present" >> "$CONFIG_TXT"
         filesUpdated=true
         config_txt_changed=true
